src/test/deca/context/valid/sansObj/not.deca
// Description:
//          Utilisation de l'opérateur unaire ! sur un booléen
//
// Résultat:
//          Succès
//
{
    boolean a = true;
    boolean b;
    b = !a;

}
