src/test/deca/context/invalid/sansObj/gt-binaire-bool.deca
// Description:
//          Utilisation de l'opérateur > avec un int et un boolean
//
// Résultat:
//Comparaison entre deux membres incompatibles
//
{
    int a = 10;
    boolean b = true;
    boolean c = (b > a);
}